--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -58,7 +58,7 @@
         android:background="@color/cardview_light_background"
         android:ellipsize="end"
         android:paddingStart="@dimen/common_spacing"
-        android:paddingEnd="@dimen/common_spacing"
+        android:paddingEnd="8dp"
         android:singleLine="true"
         app:layout_constraintBottom_toTopOf="@id/toolsTop"
         app:layout_constraintEnd_toStartOf="@id/cancelButton"
@@ -66,7 +66,7 @@
         android:paddingBottom="5dp"
         android:paddingTop="5dp"
         app:layout_constraintTop_toBottomOf="@id/editPostTitle"
-         />
+        tools:text="cancel" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/editPostTitle"
@@ -76,8 +76,8 @@
         android:ellipsize="end"
         android:singleLine="true"
         android:paddingStart="@dimen/common_spacing"
-
-        android:paddingEnd="@dimen/common_spacing"
+        android:hint="@string/editing_post"
+        android:paddingEnd="8dp"
         android:paddingTop="4dp"
         app:layout_constraintBottom_toTopOf="@id/editedContentLine"
         app:layout_constraintEnd_toStartOf="@id/cancelButton"
@@ -90,6 +90,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@color/cardview_light_background"
+        android:contentDescription="@string/cancel"
         app:layout_constraintBottom_toTopOf="@id/toolsTop"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/content"
