--- a/app/src/main/res/layout/post.xml
+++ b/app/src/main/res/layout/post.xml
@@ -14,7 +14,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:layout_editor_absoluteY="14dp"
-        tools:srcCompat="@tools:sample/avatars" />
+        android:src="@drawable/ic_test" />
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/authorName"
@@ -42,15 +42,17 @@
         app:layout_constraintTop_toBottomOf="@id/authorName"
         tools:text="09.09.2099" />
 
-    <ImageButton
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/options"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@android:color/transparent"
-        android:src="@drawable/ic_options_24dp"
+        android:layout_marginBottom="@dimen/common_spacing"
         android:contentDescription="@string/description_post_menu"
+        app:icon="@drawable/ic_options_24dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        style="@style/Widget.AppTheme.IconButton"
+        />
 
     <androidx.constraintlayout.widget.Barrier
         android:id="@+id/headerBarrier"
@@ -67,58 +69,51 @@
         tools:text="raffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff" />
 
 
-    <androidx.appcompat.widget.AppCompatImageButton
-        android:id="@+id/likes"
+    <com.google.android.material.button.MaterialButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:src="@drawable/ic_like_24dp"
+        android:id="@+id/like"
+        style="@style/Widget.AppTheme.LikeButton"
+        app:icon="@drawable/ic_like_custom_24"
+        android:checkable="true"
         app:layout_constraintStart_toStartOf="@id/postText"
-        app:layout_constraintTop_toBottomOf="@id/postText"/>
-
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/likeCount"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:singleLine="true"
-        app:layout_constraintBottom_toBottomOf="@id/likes"
-        app:layout_constraintStart_toEndOf="@id/likes"
-        tools:text="500" />
+        app:layout_constraintTop_toBottomOf="@id/postText"
+        tools:text="10020"/>
 
 
-    <androidx.appcompat.widget.AppCompatImageButton
+
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/share"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="45dp"
-        android:src="@drawable/ic_share_24dp"
+        app:icon="@drawable/ic_share_24dp"
+        style="@style/Widget.AppTheme.IconButton"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@id/likes" />
+        app:layout_constraintStart_toEndOf="@id/like"
+        android:textColor="#808080"
+        tools:text="1212"/>
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:id="@+id/shareCount"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:singleLine="true"
-        tools:text="4343"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@id/share"/>
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/viewCount"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="16dp"
         android:singleLine="true"
-        tools:text="3243"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:text="3243" />
 
     <ImageView
         android:id="@+id/view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="16dp"
         android:src="@drawable/ic_visibility_24dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/viewCount"/>
+        app:layout_constraintEnd_toStartOf="@id/viewCount" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
