--- a/app/src/main/res/layout/post.xml
+++ b/app/src/main/res/layout/post.xml
@@ -75,8 +75,8 @@
         style="@style/Widget.AppTheme.LikeButton"
         app:icon="@drawable/ic_like_custom_24"
         android:checkable="true"
-        app:layout_constraintStart_toStartOf="@id/postText"
-        app:layout_constraintTop_toBottomOf="@id/postText"
+        app:layout_constraintStart_toStartOf="@id/contentBarrier"
+        app:layout_constraintTop_toBottomOf="@id/contentBarrier"
         tools:text="10020"/>
 
 
@@ -99,9 +99,9 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="24dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginTop="8dp"
         android:singleLine="true"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/contentBarrier"
         app:layout_constraintEnd_toEndOf="parent"
         tools:text="3243" />
 
@@ -110,9 +110,44 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginTop="8dp"
         android:src="@drawable/ic_visibility_24dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/contentBarrier"
         app:layout_constraintEnd_toStartOf="@id/viewCount" />
+
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/videoContent"
+        android:layout_width="300dp"
+        android:layout_height="248dp"
+        android:src="@drawable/video_background"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/postText" />
+
+    <androidx.appcompat.widget.AppCompatImageButton
+        android:id="@+id/videoPlay"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@android:color/transparent"
+        android:src="@drawable/ic_video_play"
+        app:layout_constraintBottom_toBottomOf="@id/videoContent"
+        app:layout_constraintEnd_toEndOf="@id/videoContent"
+        app:layout_constraintStart_toStartOf="@id/videoContent"
+        app:layout_constraintTop_toTopOf="@id/videoContent" />
+
+    <androidx.constraintlayout.widget.Group
+        android:id="@+id/videoVisibility"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="visible"
+        app:constraint_referenced_ids="videoContent, videoPlay" />
+
+    <androidx.constraintlayout.widget.Barrier
+        android:id="@+id/contentBarrier"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:barrierDirection="bottom"
+        app:constraint_referenced_ids="videoContent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
