--- a/app/src/main/res/layout/intent_handler_activity.xml
+++ b/app/src/main/res/layout/intent_handler_activity.xml
@@ -3,4 +3,4 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".activity.IntentHandlerActivity" />
+    tools:context=".ui.IntentHandlerActivity" />
